# cpp-modules-reference

./: CMakeLists.txt  README.md
.cache/clangd/index/: Module.cpp.3E9F721F5E4ECBCB.idx  Module.cppm.B2472C319F936ECF.idx  main.cpp.635A42BDC50341DF.idx
src/: Module.cppm  main.cpp
